--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "pinia": "^2.0.28",
+    "primevue": "^3.27.0",
     "vee-validate": "^4.7.4",
     "vue": "^3.2.45",
     "vue-country-flag-next": "^2.3.2",
