--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@kyvg/vue3-notification": "^2.9.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.28",
     "primevue": "^3.27.0",
     "vee-validate": "^4.7.4",
